--- a/components/Hero.module.css
+++ b/components/Hero.module.css
@@ -7,6 +7,9 @@
 
 .heroContentFull {
   width: 100%;
+  max-width: 1440px;
+  margin-left: 0;
+  margin-right: auto;
 }
 
 .heroLayout {
